<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JniActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jni_base_type"
        app:layout_constraintEnd_toStartOf="@+id/btn_get_object"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_object"
        app:layout_constraintEnd_toStartOf="@+id/btn_dynamic"
        app:layout_constraintStart_toEndOf="@+id/btn_base"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dynamic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_register"
        app:layout_constraintEnd_toStartOf="@+id/btn_exception"
        app:layout_constraintStart_toEndOf="@+id/btn_get_object"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exception"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/throws_exception"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_dynamic"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/run_thread"
        app:layout_constraintEnd_toStartOf="@+id/btn_bind_thread"
        app:layout_constraintStart_toStartOf="@+id/btn_base"
        app:layout_constraintTop_toBottomOf="@+id/btn_base" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bind_thread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/bind_thread"
        app:layout_constraintStart_toEndOf="@+id/btn_thread"
        app:layout_constraintTop_toBottomOf="@+id/btn_base" />
</androidx.constraintlayout.widget.ConstraintLayout>